<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.gruppe4.menschaergerdichnicht.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/lblPlayerName"
        android:layout_alignStart="@+id/lblPlayerName"
        android:layout_alignEnd="@+id/lblPlayerName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmBtn"
        android:id="@+id/btnStartgame"
        android:onClick="OnLogin"
        android:enabled="true"
        android:focusable="true"
        android:longClickable="false"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_below="@+id/txtPlayerName"
        android:layout_alignStart="@+id/txtPlayerName"
        android:layout_alignEnd="@+id/lblPlayerName"
        android:background="@drawable/button"
        android:padding="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtPlayerName"
        android:textColor="#3fb7bd"
        android:textColorHint="#a03fb7bd"
        android:hint="@string/hintLogin"
        android:layout_below="@+id/lblPlayerName"
        android:layout_alignStart="@+id/lblPlayerName"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pName"
        android:id="@+id/lblPlayerName"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />

</RelativeLayout>
