<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gruppe4.menschaergerdichnicht.CreateGameActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/playerCount"
        android:id="@+id/lblPlayersCount"
        android:textStyle="bold"
        android:textSize="32sp"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/layoutCount"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/punishmentText"
        android:id="@+id/lblCheating"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnStartGame"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/btnStartGame" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutCount"
        android:layout_above="@+id/layoutCheat"
        android:layout_alignStart="@+id/layoutCheat"
        android:layout_marginBottom="50dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playerCount"
            android:weightSum="3"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/count2"
                android:checked="false"
                android:background="@drawable/radioselector"
                android:textColor="@drawable/txtcolor_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="2" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3"
                android:id="@+id/count3"
                android:layout_gravity="center"
                android:checked="false"
                android:background="@drawable/radioselector"
                android:textColor="@drawable/txtcolor_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4"
                android:id="@+id/count4"
                android:layout_gravity="center"
                android:checked="false"
                android:background="@drawable/radioselector"
                android:textColor="@drawable/txtcolor_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:layout_weight="1"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutCheat"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/lblPlayersCount"
        android:layout_toEndOf="@+id/lblCheating"
        android:layout_marginLeft="20dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cheat"
            android:weightSum="2"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/punish1"
                android:checked="true"
                android:background="@drawable/radioselector"
                android:textColor="@drawable/txtcolor_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/punishment1"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/punishment2"
                android:id="@+id/punish2"
                android:layout_gravity="center"
                android:checked="false"
                android:background="@drawable/radioselector"
                android:textColor="@drawable/txtcolor_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:layout_weight="1" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startBtn"
        android:id="@+id/btnStartGame"
        android:textSize="25sp"
        android:onClick="StartGame"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:padding="15dp"
        android:layout_below="@+id/lblCheating"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/button" />

</RelativeLayout>
